- JDK 1.4 compatibility fixes
git-svn-id: http://svn.jdtaus.org/svnroot/jdtaus/jdtaus-banking/jdtaus-banking-ri-bankleitzahlenverzeichnis/trunk@2153 d3f52c91-230f-0410-802c-e3ec080d4bae